--- a/0.main.tex
+++ b/0.main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,titlepage]{article}
+ \documentclass[12pt,titlepage]{article}
 
 
 \usepackage{nomencl}
@@ -31,7 +31,7 @@
 	language=Python,
     backgroundcolor=\color{backcolour},   
     commentstyle=\color{codegreen},
-    keywordstyle=\color{magenta},
+    keywordstyle=\color{blue},
     numberstyle=\tiny\color{codegray},
     stringstyle=\color{codepurple},
     basicstyle=\footnotesize,
@@ -45,7 +45,7 @@
     showstringspaces=false,
     showtabs=false,                  
     tabsize=2,
-    deletekeywords={map,filter,open}
+    deletekeywords={filter, map, open, complex}
 }
 
 \lstset{style=mystyle}
