--- a/1.introduction_to_TDA.tex
+++ b/1.introduction_to_TDA.tex
@@ -248,7 +248,7 @@ The topology $\mathcal{T}'$ is defined in a straightforward way by those subsets
 
 In figure \ref{fig:reebgraph} the topological space $(X,\mathcal{T})$ is the torus, and the function $f$ is the height function. The horizontal "slices" are the level sets of the torus with respect to $f$. The Reeb graph keeps track of the changes of the connected components of the level sets providing an effective representation of the torus. The Reeb graph can be thought as the skeleton of the topological space $(X,\mathcal{T})$, where the connected components of the level sets collapse into a point providing a condensed, summarized representation of the original space $X$. Another example can be seen in \ref{fig:reebgraph2}.
 
-\subsection{Simplices and Simplicial Complexes}
+\subsection{Simplices and Simplicial Complexes}\label{sec:Simplices and Simplicial Complexes}
 In the example discussed in section 1.2, we saw that the output of Mapper was an undirected graph. This was only a simple case; the output of Mapper is a higher dimensional object, called \textit{simplicial complex}. We are interested in simplicial complexes because by the means of a suitable cover of the space $X$, the Nerve theorem \ref{nerve} provides a way to construct a simplicial complex that is homotopy equivalent to $X$. The outline of this section is the following: first we'll provide the reader with a purely combinatorial notion of a simplicial complex.  We'll provide an example to better illustrate this concept. Then, we'll introduce the concept of \textit{realization of a simplicial complex} in a vector space, that will further help the reader familiarize with this concept since it provides a more intuitive visualization of the simplicial complex. 
 
 \begin{definition}{[\textit{Simplicial Complex}]}
