--- a/3.mapper.tex
+++ b/3.mapper.tex
@@ -213,10 +213,12 @@ mapper.plot()
 \end{lstlisting}
 
 Since in practice it is normal to alternate many calls to fit() and set\_params() to find a good parameter set, the fit() method has been implemented in order to avoid to alway recompute everything from scratch. The Mapper algorithm has indeed a clear pipeline presented in section 2.1. If as in the example above we change only the parameters of the clustering step, it is useless to recompute the filter values and the cover, already calculated before. For this reason, the Mapper class keeps track internally of its state, what has changed compared to the previous state, and the new call to the fit() method performs only the computations needed. In the example, only the clustering step will we done before computing the output graph.
-\subsubsection{\textit{class filter.Filter}} \label{subsubsection:class filter.Filter}
-Python do not provide the opportunity of defining abstract classes. However, given the non trivial complexity of the package, we chose to the define anyway a base class for each step of of the Mapper pipeline to provide a clear way of understanding the interface of the backend API. \textit{Each one of these four classes} \lstinline{class filter.Filter, class cover.Cover, class cluster.Cluster, class cutoff.Cutoff} \textit{was written in order that every time a new filter, cover, cluster, cutoff has to be implemented, it will be implemented as a class derived from one of these corresponding base classes}. For example, a projection filter has to be implemented as child class of the corresponding Filter class: \lstinline|class Projection(Filter)|. For example, the programmer that will be expanding the package by adding a new filter, will have to read the code of the Filter class to see which methods have to be overridden, and which methods are already provided in the base class. In this way these four base classes act as a guideline for the programmer to make sure that every newly added class will respect the backend API of the package.\\The class Filter simply declares the \lstinline{__call__()} operator raising a \lstinline{NotImplementedError} exception, indicating to the programmer that any new filter has to override such a method. Since Python is not type-checked (although the package \textbf{typing} could be used from Python 3.5) it was chosen to put clear indications of the expected parameter and the return value type In the docstring of the \lstinline{filter.Filter.__call__()} method. The same procedure has been used for all the methods of the thee other base classes \lstinline{class filter.Filter, class cover.Cover, class cluster.Cluster, class cutoff.Cutoff} raising a \lstinline{NotImplementedError} exception.\\ A static factory method necessary for the instantiation of the Filter object when the Mapper object is instantiated with only strings as arguments. Note that the code of \lstinline{filter.Filter.factory()} does not have to be updated every time a new child class is added to the package thanks to the use of the \lstinline{globals()} method.
 
-\subsubsection{\textit{class filter.Eccentricity(filter.Filter)}}
+\subsubsection{filter.py}
+This module implements some common filters.
+\paragraph{\textit{class filter.Filter}} \label{subsubsection:class filter.Filter}
+Python do not provide the opportunity of defining abstract classes. However, given the non trivial complexity of the package, we chose to the define anyway a base class for each step of of the Mapper pipeline to provide a clear way of understanding the interface of the backend API. \textit{Each one of these four classes} \lstinline{class filter.Filter, class cover.Cover, class cluster.Cluster, class cutoff.Cutoff} \textit{was written in order that every time a new filter, cover, cluster, cutoff has to be implemented, it will be implemented as a class derived from one of these corresponding base classes}. For example, a projection filter has to be implemented as child class of the corresponding Filter class: \lstinline|class Projection(Filter)|. For example, the programmer that will be expanding the package by adding a new filter, will have to read the code of the Filter class to see which methods have to be overridden, and which methods are already provided in the base class. In this way these four base classes act as a guideline for the programmer to make sure that every newly added class will respect the backend API of the package.\\The class Filter simply declares the \lstinline{__call__()} operator raising a \lstinline{NotImplementedError} exception, indicating to the programmer that any new filter has to override such a method. Since Python is not type-checked (although the package \textbf{typing} could be used from Python 3.5) it was chosen to put clear indications of the expected parameter and the return value type In the docstring of the \lstinline{filter.Filter.__call__()} method. The same procedure has been used for all the methods of the thee other base classes \lstinline{class filter.Filter, class cover.Cover, class cluster.Cluster, class cutoff.Cutoff} raising a \lstinline{NotImplementedError} exception.\\ A static factory method necessary for the instantiation of the Filter object when the Mapper object is instantiated with only strings as arguments. Note that the code of \lstinline{filter.Filter.factory()} does not have to be updated every time a new child class is added to the package thanks to the use of the \lstinline{globals()} method.
+\paragraph{\textit{class filter.Eccentricity(filter.Filter)}}
 This implements the eccentricity filter as presented in \cite{pythonmapper}. In short, the eccentricity filter value of the $n-th$ data point is the p-norm of the $n-th$ row of the distance matrix
 $$Eccentricity(x_i; p) = \left(\sum_{k=0}^{N} d(x_i, x_k)^p\right)^\frac{1}{p}$$
 As explained above in section \ref{subsubsection:class filter.Filter} we can see that this class is a child of \lstinline|filter.Filter|. It implements an \lstinline|__init__()| method initializing the attributes that every cover object must have and overrides the method \lstinline|__call__()| as indicated in the docstring of the same method of the base class \lstinline|filter.Filter.__call__()|.\\
@@ -224,24 +226,37 @@ Since the computation of the eccentricity is computationally very expensive beca
 When the package \textbf{lmapper} is imported, the module \textbf{filterutils} is imported. If the latter import fails, the user is notified about the failure with a printed message on the terminal and a slower, fully Python implementation of the functions \lstinline{eccentricity()} and \lstinline{my_distance()} provided in the \textbf{filter.py} module is used instead.\\
 A last method, \lstinline|filter.Eccentricity.for_assignment_only()| is defined. However, this method is meant to be used from the companion package \textbf{predmap} and not to be exposed to the final user of the package. This implementation is however not clean and prone to bugs, since it makes the implementations of the two packages profoundly interdependent. This method is necessary as the \lstinline|filter.Filter.__call__()| method is meant to operate on two-dimensional \lstinline|np.ndarray| representing the whole data matrix in order to vectorize as much as possible the computations to achieve speedup. However, we'll see that in \textbf{predmap} it is necessary to compute the filter values \textit{of only one new data point belonging to the test set after having already computed the filter values of the whole original data matrix of the training set}. These two different situations of calculating filter values require two different implementations. It is not clear if the implementation needed in the second scenario was to be implemented in \textbf{predmap} or in \textbf{lmapper}. For now it has been chosen to add this method \lstinline|filter.Eccentricity.for_assignment_only()|. A more elegant solution is left as further work.
 
-\subsubsection{\textit{class cover.Cover}}
+\subsubsection{cover.py}
+This module defines some classes to implement different ways of creating a pullback cover.
+\paragraph{\textit{class cover.Cover}}
 As explained above in section \ref{subsubsection:class filter.Filter} \lstinline|class cover.Cover| is a base class to define the common interface that any new implementation of a new cover method must respect. Similar to \lstinline|filter.Filter| it implements an \lstinline|__init__()| method initializing the attributes that every cover object must have. It implements a method \lstinline{cover.Cover.find_intersecting_dict()} that outputs a dictionary that keeps track of which fibers intersect. This implementation is valid as soon as the filter values are one dimensional, and each Fiber object represents is the counter image of an interval on the real line. When the package will be expanded with multi-dimensional filters, or with more complicated ways of building a cover, this method will become obsolete and must be changed.
-\subsubsection{\textit{class cover.UniformCover(OverlapCover)}}
+\paragraph{\textit{class cover.UniformCover(OverlapCover)}}
 It derives from \lstinline|class OverlapCover(Cover)|. This latter class was introduced since \lstinline|class UniformCover(OverlapCover), KeplerCover(OverlapCover), BalancedCover(OverlapCover)| share the common idea of being defined by overlapping intervals on the image of the filter $f(X)\subset\mathcal R$. We can see that  \lstinline|class cover.UniformCover(OverlapCover)| just needs to define the \lstinline{cover.UniformCover.fit()} method, in which the particular construction of this specific cover is implemented. Note that "constructing a cover" for an \lstinline{OverlapCover} means finding the variables  \lstinline|list_of_as| and  \lstinline|list_of_bs| that are respectively the list of the leftmost extremes and the rightmost extremes of the intervals $I_j=(a_j, b_j)$ forming the open cover $\mathcal I = \{I_j\}$ of $f(X)$. Once defined these intervals, all the rest of the implementation is taken care of by the method \lstinline|cover.OverlapCover.find_entries()| that finds the corresponding data points belonging to each preimage $f^{-1}(I_j)$ and instantiating an object of class \lstinline|cover.Fiber| for each preimage $f^{-1}(I_j)$. The output  of \lstinline|cover.OverlapCover.find_entries()| is a list of \lstinline|cover.Fiber| objects, and a dictionary created by the \lstinline|cover.Cover.find_intersecting_dict()| method.
-\subsubsection{\textit{class cover.Fiber}}
-\lstinline|class cover.Fiber| is just a data structure containing informations relative to each preimage $B_i$ of the pullback cover $\mathcal B = \{B_i\}$. It stores the indices of the data points that the corresponding preimage $B_i$ contains, their filter values, and other useful information.
-\subsubsection{\textit{class complex.Node}}
-Class responsible for storing the information of one node of the final complex, result of the cluster call on a Fiber. The objects of class Node are stored (owned) by objects of class Fiber and instantiated by the \_\_call\_\_()method of an object of class cluster.Cluster.
-\subsubsection{\textit{class ClusterInfo}}
-Data structure containing information about the parameters of the clustering algorithm used to produce the Nodes. Objects of class ClusterInfo are owned by Fiber objects. 
-\subsubsection{\textit{class cluster.Cluster}}
-Abstract class implementing the interface for any Cluster Object.
-\subsubsection{\textit{class cluster.Linkage}}
-Example of Cluster object. The \_\_cal\_\_() method takes a Fiber, accesses to its data points and cluster them. Each cluster is represented by one Node object, that is owned by the corresponding fiber in its list attribute Fiber.\_nodes.
-\subsubsection{\textit{class cutoff.Cutoff}}
-The Cutoff class is an abstract class providing the interface for each different cutoff object
-\subsubsection{\textit{class cutoff.FirstGap}}
-Example of Cutoff. This class implements the First Gap method illustrated by Carlsson et al. in \cite{PAD}. It is used by the cluster.Linkage class to determine the number of clusters to create starting from the full linkage matrix.
-\subsubsection{\textit{class complex.Complex}}
-Class responsible for storing all the simplices, edges, nodes of the Nerve Complex output of the Mapper algorithm. It also implements a method for drawing te 1-skeleton of the nerve complex. Starting from a Cover object the fit() method accesses all the fibers, all the corresponding nodes and looks for intersections between nodes, creating a corresponding Nerve Complex stored as a list of simplices in the \_simplices attribute. The corresponding 1-d skeleton is stored in the NetworkX.Graph attribute complex.Complex.\_graph. 
+\paragraph{\textit{class cover.Fiber}}
+\lstinline|class cover.Fiber| is an iterable data structure containing informations relative to each preimage $A_i$ of the pullback cover $\mathcal A = \{A_i\}$. It stores the indices of the data points that the corresponding preimage $B_i$ contains and their filter values. The implementation of such a data structure could have been avoided. In fact, it stores on memory information that is duplicated in the system (in the Mapper object), and that could have been easily retrieved at run time each time it was needed. However, implementing such data structure and duplicating the information makes the algorithm faster and the implementation easier, at the cost of an increased memory requirement. This choice was made also to ease the implementation of the package \lstinline|predmap|: such package will have to access these informations fast and often, thus the increased memory price is negligible compared to the increased simplicity of the code and to the consequent speedup.
+
+\subsubsection{complex.py}
+This module implements the classes needed to create the Nerve Complex output of the Mapper algorithm.
+\paragraph{\textit{class complex.Node}}
+Simple data structure responsible for storing the information of one node of the final complex, result of the cluster call on a Fiber object. To be clear, at the moment of instantiating a \lstinline|cover.Fiber| object the attribute \lstinline|cover.Fiber._nodes| is an empty list. After having called the method \lstinline|cluster.Linkage.__call__(cover.Fiber)| the attribute  \lstinline|cover.Fiber._nodes| becomes populated by a list of objects \lstinline|complex.Node|, each one corresponding to a cluster found by the clustering method.
+\paragraph{\textit{class complex.Complex}}
+Class responsible for storing all the simplices, edges, nodes of the Nerve Complex output of the Mapper algorithm. It also implements a method for drawing te 1-skeleton of the nerve complex. It implements four method: \lstinline|complex.Complex.fit(), complex.Complex.add_simplex(), complex.Complex.add_facet(), complex.Complex.plot()|.\\
+While the \lstinline|complex.Complex.add_simplex(), complex.Complex.add_facet()| methods are trivial, we deepen the details of the more complicated \lstinline|complex.Complex.fit()| method. Starting from a \lstinline|cover.Cover| object, the \lstinline|complex.Complex.fit(cover.Cover)| method has access to all the \lstinline|fiber.Fiber| objects stored inside the \lstinline|cover.Cover| object, and thus to all the \lstinline|complex.Node| objects stored in the different \lstinline|cover.Fiber._nodes| attribute. \lstinline|complex.Complex.fit()| looks for intersections between all these \lstinline|complex.Node| objects, creating the corresponding Nerve Complex, as explained in section \ref{sec:Simplices and Simplicial Complexes}. Such Nerve complex is stored as a list of simplices (a simplex is represented as a tuple of int, where each int is the id of a \lstinline|complex.Node|) in the \lstinline|complex.Complex._simplices| attribute. The corresponding 1-d skeleton is stored in the \lstinline|networkx.Graph| attribute \lstinline|complex.Complex._graph|. The choice of using a \lstinline|networkx.Graph| is due to the fact that this class implements a easy to use drawing method \lstinline|networkx.Graph.draw()| that we can reuse providing the \lstinline|complex.Complex| class with a method \lstinline|complex.Complex.plot()| that simply wraps the \lstinline|networkx.Graph.draw()| method.
+
+\subsubsection{cluster.py}
+This module implements some clustering algorithms for the clustering step of Mapper's pipeline.
+\paragraph{\textit{class cluster.ClusterInfo}}
+Simple data structure containing information about the parameters of the specific clustering algorithm used to produce the \lstinline|complex.Nodes|. Objects of class \lstinline|cluster.Clusterinfo| are instantiated by a cluster call on a fiber (\lstinline|cluster.Linkage.__call__(cover.Fiber)|) and are owned by the corresponding \lstinline|cover.Fiber| objects in the attribute  \lstinline|cover.Fiber._clusterinfo|.
+\paragraph{\textit{class cluster.Cluster}}
+As explained above in section \ref{subsubsection:class filter.Filter} \lstinline|class cluster.Cluster| is a base class to define the common interface that any new implementation of any new cluster method must respect. The interface is simple: as we introduced before these objects must have a \lstinline|__call__| method, and the two common \lstinline|get_params| and \lstinline|set_params| methods.
+\paragraph{\textit{class cluster.Linkage}}
+Example of \lstinline|cluster.Cluster| child class. The \lstinline|cluster.Linkage.__call__| method takes a \lstinline|cover.Fiber| object, accesses to its data points and cluster them wrapping a \lstinline|scipy.cluster.hierarchy.linkage| object. Each cluster is then represented by one \lstinline|complex.Node| object, that is owned by the corresponding fiber in its attribute \lstinline|cover.Fiber._nodes|.
+
+\subsubsection{cutoff.py}
+This module implements the methods described in \cite{PAD} to determine where to cut the dendrogram produced by a linkage algorithm to define the optimal clusters for the Mapper algorithm.
+\paragraph{\textit{class cutoff.Cutoff}}
+As explained above in section \ref{subsubsection:class filter.Filter} \lstinline|class cutoff.Cutoff| is a base class to define the common interface that any new implementation of any new cutoff method must respect.
+\paragraph{\textit{class cutoff.FirstGap}}
+This class implements the First Gap method illustrated by Carlsson et al. in \cite{PAD}. It is used by the  \lstinline|cluster.Linkage| class to determine the number of clusters to create starting from the full linkage matrix.
+
 
